# whitenoise

./: .clippy.toml  .cursorignore  .env.example  .gitignore  .goosehints  CHANGELOG.md  Cargo.toml  Dockerfile.linux_build  README.md  biome.json  bun.lockb  clippy.toml  deny.toml  docker-compose.yml  get-docker.sh  justfile  message-aggr-plan.md  package.json  repomix-output.xml  rust-toolchain.toml  rustfmt.toml  tailwind.config.ts  vite.config.ts
.cargo/: config.toml
.cursor/: TEST_CLEANUP_SUMMARY.md  event-processing-refactor-plan.md
.cursor/rules/: format-lint-test.mdc  integration-test.mdc  mls-protocol-docs.mdc  rust-code-style.mdc  svelte5.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-issue-project.yml  build_android.yml  build_android_split.yml  build_android_universal.yml  build_ios.yml  build_linux.yml  build_macos.yml  ci.yml  deploy-github-pages.yml  release.yml
.github/workflows/health_check/: .gitignore  Cargo.toml  README.md
.storybook/: main.ts  preview.ts
db_migrations/: 0001_accounts.sql  0001_initial.sql  0003_contacts.sql  0003_create_direct_messages.sql  0004_accounts_relays.sql  0005_new_tables.sql  0006_data_migration.sql  0007_drop_old_tables.sql  0008_add_account_follows_unique_constraint.sql  0009_fix_timestamp_triggers.sql  0010_add_group_information_table.sql  0011_published_events.sql  0012_add_group_image_to_group_information.sql  0012_make_account_id_nullable_on_processed_events.sql  0013_drop_redundant_columns_media_files.sql  0013_normalize_relay_urls.sql  0014_add_event_created_at_columns.sql  0014_enhance_processed_events.sql  0015_recreate_media_files.sql  0016_add_explicit_file_hashes.sql  0017_aggregated_messages.sql  0018_accounts_groups.sql
dev/: blossom-server-ts-config.yml  nostr-rs-relay-config.toml  strfry.conf
docs/: DEVELOPMENT_TOOLS.md  EXTERNAL-RESOURCES.md  SECURITY.md  event-timestamp-unification-plan.md  storage-architecture.md
docs/mls/: README.md  marmot-implementation.md  mdk-integration.md  nip-ee-implementation.md  nostr-mls-integration.md
example_data/dev/: whitenoise.json  whitenoise.sqlite-shm  whitenoise.sqlite-wal  whitenoise_uuid
examples/: README.md  fetch_contacts_example.rs  fetch_metadata_debug.rs  fetch_metadata_raw.rs  onboarding_workflow.rs  simple_chat.rs  two_clients_chat.rs
scripts/: check-all.sh  check-clippy.sh  check-docs.sh  check-fmt.sh  check_migrations.sh  extract-coverage.sh  install-dev-tools.sh  publish_nip89_handler.sh  tmux_and_dev.sh  tmux_local_dev.sh  tmux_stop_dev.sh  wait_for_relays.sh
src/: accounts.rs  app.css  app.d.ts  app.html  database.rs  error.rs  lib.rs  old_accounts.rs  relays.rs  secrets_store.rs  types.rs  whitenoise.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/db_migrations/: 0002_add_media_files.sql  0004_add_event_kind_to_messages.sql  0005_add_relay_uniqueness_constraints.sql
src-tauri/src/: accounts.rs  database.rs  groups.rs  invites.rs  key_packages.rs  lib.rs  messages.rs  relays.rs  secrets_store.rs  whitenoise.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/accounts/: create_identity.rs  fetch_relays_list.rs  get_nostr_wallet_connect_balance.rs  has_nostr_wallet_connect_uri.rs  mod.rs  publish_metadata_event.rs  set_active_account.rs  set_nostr_wallet_connect_uri.rs
src-tauri/src/commands/groups/: create_group.rs  delete_message.rs  get_active_groups.rs  get_group.rs  get_group_admins.rs  get_group_and_messages.rs  get_group_members.rs  get_group_relays.rs  get_groups.rs  mod.rs  rotate_key_in_group.rs  send_mls_message.rs
src-tauri/src/commands/invites/: accept_invite.rs  get_invites.rs
src-tauri/src/commands/key_packages/: delete_all_key_packages.rs  publish_new_key_package.rs  valid_key_package_exists_for_user.rs
src-tauri/src/commands/media/: download_file.rs  fetch_group_media_files.rs  mod.rs  upload_file.rs  upload_media.rs
src-tauri/src/commands/messages/: query_message.rs
src-tauri/src/commands/nostr/: decrypt_content.rs  fetch_enriched_contacts.rs  fetch_relays.rs  init_nostr_for_current_user.rs  invite_to_white_noise.rs  publish_relay_list.rs  query_contacts_with_metadata.rs  query_enriched_contacts.rs
src-tauri/src/commands/payments/: pay_invoice.rs
src-tauri/src/commands/welcomes/: accept_welcome.rs  decline_welcome.rs  get_welcome.rs  get_welcomes.rs
src-tauri/src/media/: blossom.rs  cache.rs  encryption.rs  errors.rs  media_retriever.rs  mod.rs  sanitizer.rs  types.rs
src-tauri/src/nostr_manager/: event_processor.rs  fetch.rs  media.rs  mod.rs  parser.rs  query.rs  search.rs  subscriptions.rs
src-tauri/src/utils/: mod.rs  retry.rs
src/OLD_commands/: mod.rs
src/OLD_commands/accounts/: publish_metadata_event.rs
src/OLD_commands/key_packages/: delete_all_key_packages.rs
src/OLD_commands/nostr/: export_nsec.rs  fetch_contacts_with_metadata.rs  invite_to_white_noise.rs  query_enriched_contact.rs
src/OLD_commands/welcomes/: accept_welcome.rs
src/_OLD/: OLD_key_packages.rs
src/api/: accounts.rs  mod.rs  nostr.rs
src/commands/accounts/: fetch_relays_list.rs  get_accounts.rs  login.rs  logout.rs  mod.rs  (+2 more)
src/integration_tests/: README.md  mod.rs  registry.rs
src/lib/: utils.ts
src/lib/stores/: chat.ts  (+4 more)
src/media/: blossom.rs  cache.rs  encryption.rs  errors.rs  mod.rs  types.rs
src/media_old/: cache.rs  encryption.rs  mod.rs  sanitizer.rs
src/nostr_manager/: contact_list_tests.rs  event_processor.rs  fetch.rs  mod.rs  parser.rs  publisher.rs  query.rs  search.rs  subscriptions.rs  sync.rs  utils.rs
src/routes/: +layout.svelte  +page.svelte
src/whitenoise/: accounts.rs  accounts_groups.rs  aggregated_message.rs  app_settings.rs  chat_list.rs  database.rs  error.rs  event_processing.rs  event_processor.rs  event_tracker.rs  event_tracking.rs  follows.rs  group_information.rs  groups.rs  key_packages.rs  media_files.rs  messages.rs  mod.rs  nip55_signer.rs  relays.rs  secrets_store.rs  users.rs  utils.rs  welcomes.rs
static/styles/: colors.css  fonts.css  forms.css  settings.css
(+306 files in other folders)
