[package]
name = "whitenoise"
version = "0.1.0"
description = "A secure messenger built on MLS and Nostr"
authors = ["White Noise Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "whitenoise"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.88"
base64 = "0.22"
blurhash = "0.2.3"
chacha20poly1305 = "0.10"
chrono = { version = "0.4.40", features = ["serde"] }
clap = "4.5.37"
hex = "0.4"
image = "0.24"
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
lightning-invoice = "0.33.1"

nostr = { version = "0.42", git="https://github.com/delcin-raj/nostr", rev = "08e74d21b927d030e34655c4cfa08a84c379a96e", features = [ "std" ] }
nostr-mls = { version = "0.42", git="https://github.com/delcin-raj/nostr", rev = "08e74d21b927d030e34655c4cfa08a84c379a96e" }
nostr-mls-sqlite-storage = { version = "0.42", git="https://github.com/delcin-raj/nostr", rev = "08e74d21b927d030e34655c4cfa08a84c379a96e" }
nostr-sdk = { version = "0.42", git="https://github.com/delcin-raj/nostr", rev = "08e74d21b927d030e34655c4cfa08a84c379a96e", features = [
    "lmdb",
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }
nwc = { version = "0.42", git="https://github.com/delcin-raj/nostr", rev = "08e74d21b927d030e34655c4cfa08a84c379a96e" }
nostr-blossom = { version = "0.42", git="https://github.com/delcin-raj/nostr", rev = "08e74d21b927d030e34655c4cfa08a84c379a96e" }

# LOCAL RUST_NOSTR FOR DEVELOPMENT
# nostr = { version = "0.42", path="../rust-nostr/crates/nostr", features = [ "std" ] }
# nostr-mls = { version = "0.42", path="../rust-nostr/mls/nostr-mls" }
# nostr-mls-sqlite-storage = { version = "0.42", path="../rust-nostr/mls/nostr-mls-sqlite-storage" }
# nostr-sdk = { version = "0.42", path="../rust-nostr/crates/nostr-sdk", features = [
#     "lmdb",
#     "nip04",
#     "nip44",
#     "nip47",
#     "nip59",
# ] }
# nwc = { version = "0.42", path="../rust-nostr/crates/nwc" }

petname = "2.0.2"
rand = "0.9"
reqwest = { version = "0.11", features = ["multipart", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "migrate", "macros", "chrono", "derive", "json" ] }
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
base64ct = "=1.7.3"
derivative = "2.2.0"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.19.1"

[profile.release]
debug = false
opt-level = "z"
lto = true
codegen-units = 1
strip = true
