[package]
name = "whitenoise"
version = "0.1.0"
description = "A secure messenger built on MLS and Nostr"
authors = ["White Noise Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whitenoise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1.88"
base64 = "0.22"
blurhash = "0.2.3"
chacha20poly1305 = "0.10"
chrono = { version = "0.4.40", features = ["serde"] }
hex = "0.4"
image = "0.24"
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
lightning-invoice = "0.33.1"
nostr = { version = "0.41", git="https://github.com/rust-nostr/nostr", rev="5a2e66874c6e6cb0f5b8bcb50c1d37aecd7a5d90", features = [ "std", "parser" ] }
nostr-mls = { version = "0.41", git="https://github.com/rust-nostr/nostr", rev="5a2e66874c6e6cb0f5b8bcb50c1d37aecd7a5d90" }
nostr-mls-sqlite-storage = { version = "0.41", git="https://github.com/rust-nostr/nostr", rev="5a2e66874c6e6cb0f5b8bcb50c1d37aecd7a5d90" }
nwc = { version = "0.41", git="https://github.com/rust-nostr/nostr", rev="5a2e66874c6e6cb0f5b8bcb50c1d37aecd7a5d90" }
once_cell = "1.21"
petname = "2.0.2"
rand = "0.9"
reqwest = { version = "0.11", features = ["multipart", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "migrate", "macros", "chrono", "derive", "json" ] }
tauri = { version = "2.5", features = [] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-notification = "2.2.2"
tauri-plugin-shell = "2.2"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
nostr-sdk = { version = "0.41", git="https://github.com/rust-nostr/nostr", rev="5a2e66874c6e6cb0f5b8bcb50c1d37aecd7a5d90", features = [
    "ndb",  # Use NDB for macOS and iOS
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }

[target.'cfg(not(any(target_os = "ios", target_os = "macos")))'.dependencies]
nostr-sdk = { version = "0.41", git="https://github.com/rust-nostr/nostr", rev="5a2e66874c6e6cb0f5b8bcb50c1d37aecd7a5d90", features = [
    "lmdb",  # Use LMDB for all other platforms
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2.2"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.19.1"

[profile.release]
debug = false
opt-level = "z"
lto = true
codegen-units = 1
strip = true
